	3.1		1/1/2014
				Features:
					Added the ability to limit the number of reports a player can submit against another player.
				New commands:
					/report request most
					/report delete/remove <Player Name> [reported/sender]
				New Configuration Options:
					general.permissions.opsHaveAllPermissions - Specifies if OPs should have all the permissions for this plugin by default.
					general.reporting.limitReportsAgainstPlayers - If players should be limited on how many reports they can submit against another player.
					general.reporting.limitNumberAgainstPlayers - The number of reports a player can submit against another player.
					general.reporting.alerts.toConsole.limitAgainstPlayerReached - If the console should log when a player has reached their allowed reporting limit against another player.
					general.reporting.alerts.toConsole.allowedToReportPlayerAgain - If the console should log when a player is allowed to report another player.
					general.reporting.alerts.toPlayer.allowedToReportAgain - If the player should be alerted when they are allowed to report again after reaching their reporting limit.
					general.reporting.alerts.toPlayer.allowedToReportPlayerAgain - If the player should be alerted when they are allowed to report another player after reaching their reporting limit.
				Changes:
					Removed Permissions plugin support.
					Configuration:
						general.reporting.alerts.limitReached moved to general.reporting.alerts.toConsole.limitReached
						general.reporting.alerts.allowedToReportAgain moved to general.reporting.alerts.toConsole.allowedToReportAgain
	3.1.1	1/8/2014
				Changes:
					Plugin update checking now works with the ServerMods API.
				New Configuration Option:
					plugin.updates.api-key - The api-key to send with the plugin update request.
	3.1.2	1/17/2014
				Fixed a ClassCastException when reporting with the console.
	3.1.3
				Fixed the delete command not working when trying to delete the last viewed report.