@@ -282,3 +282,4 @@ Changelog:
 				Fixed a ClassCastException when reporting with the console.
 	3.1.3
 				Fixed the delete command not working when trying to delete the last viewed report.
+				Fixed OPs and console not being able to alter or delete a report if the claiming player had a mod level above theirs.
